<resources>
    <string name="app_name">My Notes</string>
    <string name="nav_home">Home</string>
    <string name="nav_create_notes">Create Note</string>
    <string name="nav_draft_note">Draft Notes</string>
    <string name="nav_saved_note">Saved Notes</string>
    <string name="nav_deleted_notes">Deleted Notes</string>
    <string name="nav_app_settings">Settings</string>
    <string name="nav_app_about_app">About</string>
    <string name="nav_share">Share</string>
    <string name="nav_share_twitter">Twitter</string>
    <string name="user_title">My Notes</string>
    <string name="user_email">www.mynotes.com</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="content_description_add_button">Add Notes</string>
    <string name="copyright_text">All Rights Are Reserved! 2023</string>



    <string name="dashboard_created_notes">Notes</string>
    <string name="dashboard_deleted_notes">Deleted</string>
    <string name="dashboard_draft_notes">Drafts</string>
    <string name="dashboard_shared_notes">Shared</string>
    <string name="dashboard_notes_count">(5)</string>

    <string name="blank_page">We\'ll be back soon!</string>
</resources>