<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/dashboard_row_one"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:defaultFocusHighlightEnabled="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_add_button"
                android:src="@drawable/notepad_app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/caveat_bold"
                android:text="@string/dashboard_created_notes"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:defaultFocusHighlightEnabled="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_add_button"
                android:src="@drawable/deleted_notes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/caveat_bold"
                android:text="@string/dashboard_deleted_notes"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dashboard_row_two"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/dashboard_row_one">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:defaultFocusHighlightEnabled="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_add_button"
                android:src="@drawable/draft_notes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/caveat_bold"
                android:text="@string/dashboard_draft_notes"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:defaultFocusHighlightEnabled="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_add_button"
                android:src="@drawable/shared_notes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/caveat_bold"
                android:text="@string/dashboard_shared_notes"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/dashboard_row_two">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:defaultFocusHighlightEnabled="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_add_button"
                android:src="@drawable/notes_count" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/notes_count"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/caveat_bold"
                android:text="@string/dashboard_created_notes"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/created_notes_count"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="@string/dashboard_notes_count"
                android:fontFamily="@font/caveat_bold"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                android:textSize="25sp"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:defaultFocusHighlightEnabled="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_add_button"
                android:src="@drawable/files_draft" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/caveat_bold"
                android:text="@string/dashboard_draft_notes"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/draft_notes_count"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="@string/dashboard_notes_count"
                android:fontFamily="@font/caveat_bold"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                android:textSize="25sp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#9C27B0"
        android:contentDescription="@string/content_description_add_button"
        android:src="@drawable/add_notes" />

</RelativeLayout>